--- a/contact.html
+++ b/contact.html
@@ -152,23 +152,22 @@
                         <div class="contact__left">
                             <div class="section__heading mb-50">
                                 <span class="section__heading--subtitle text__secondary">CONTACT</span>
-                                <h2 class="section__heading--title mb-10">Get I contact work </h2> 
-                                <p class="section__heading--desc">Promote your blog posts, case udie, and product ouncems
-                                    with the the branded videoscustomers coming back for
-                                    services Makes best effort.</p>
+                                <h2 class="section__heading--title mb-10">Let's work togather </h2> 
+                                <p class="section__heading--desc">If you're looking to collaborate on exciting projects or have a job opportunity to offer, I'm open to new opportunities. Feel free to reach out to discuss how we can work together to create innovative solutions and achieve mutual success. Let's bring ideas to life!</p>
                             </div>
-                            <form class="contact__form" action="#">
+                            <form class="contact__form" action="https://formkeep.com/f/8741cf1cc856" method="POST">
                                 <div class="row">
-                                    <div class="col-lg-6 col-md-6 col-sm-6 mb-30">
-                                        <input class="contact__input--field" placeholder="Your name" type="text">
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-6 mb-30">
-                                        <input class="contact__input--field" placeholder="Your email" type="text">
-                                    </div>
+                                  <div class="col-lg-6 col-md-6 col-sm-6 mb-30">
+                                    <input class="contact__input--field" placeholder="Your name" type="text" name="name">
+                                  </div>
+                                  <div class="col-lg-6 col-md-6 col-sm-6 mb-30">
+                                    <input class="contact__input--field" placeholder="Your email" type="text" name="email">
+                                  </div>
                                 </div>
-                                <textarea class="contact__textarea--field" placeholder="Message"></textarea>
-                                <button class="contact__button primary__btn">Send Request</button>
-                            </form>
+                                <textarea class="contact__textarea--field" placeholder="Message" name="message"></textarea>
+                                <button class="contact__button primary__btn" type="submit">Send Request</button>
+                              </form>
+                              
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -180,8 +179,8 @@
                                 <div class="contact__info--content">
                                     <h3 class="contact__info--title">Call Me</h3>
                                     <p class="contact__info--desc">
-                                        <a href="tel:+880254615566">+880254615566</a> <br>
-                                        <a href="tel:+880254615566">+880254615566</a>
+                                        <a href="tel:+60178797176">+60178797176</a> <br>
+                                        
                                     </p>
                                 </div>
                             </div>
@@ -192,8 +191,8 @@
                                 <div class="contact__info--content">
                                     <h3 class="contact__info--title">Email Us</h3>
                                     <p class="contact__info--desc">
-                                        <a href="mailto:info@example.com">info@example.com</a> <br>
-                                        <a href="mailto:info@example.com">info@example.com</a>
+                                        <a href="mailto:info@example.com">sufifirdaus95@gmail.com</a> <br>
+                                        </a>
                                     </p>
                                 </div>
                             </div>
@@ -204,8 +203,8 @@
                                 <div class="contact__info--content">
                                     <h3 class="contact__info--title">Address</h3>
                                     <p class="contact__info--desc">
-                                        20, 25 Dhaka,0123 <br>
-                                            Ratrba baraj,20
+                                        Kajang, Selangor<br>
+                                            Malaysia
                                     </p>
                                 </div>
                             </div>
@@ -219,7 +218,8 @@
         <!-- Start contact map area -->
         <div class="contact__map--area contact__page--map section--padding pt-0">
             <div class="container">
-                <iframe class="contact__map--iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7887.465355142307!2d-0.13384360843222626!3d51.4876034467734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760532743b90e1%3A0x790260718555a20c!2sU.S.%20Embassy%2C%20London!5e0!3m2!1sen!2sbd!4v1632035375945!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe class="contact__map--iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3483.678616491069!2d101.7859546148402!3d2.993021740717386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cdcaac5d547833%3A0x9f88c98d329896d3!2sKajang%2C%20Selangor!5e0!3m2!1sen!2sbd!4v1632035375945!5m2!1sen!2sbd"
+                style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
         <!-- End contact map area -->
@@ -248,6 +248,8 @@
       document.getElementById("light__to--dark")?.classList.remove("dark--version");
     } 
   </script>
+
+
   
 </body>
 </html>
