--- a/index.html
+++ b/index.html
@@ -76,46 +76,45 @@
                                         <img class="hero__profile--thumbnail__media" src="assets/img/hero/profile-image.png" alt="img">
                                     </div>
                                     <div class="hero__profile--text">
-                                        <h2 class="hero__profile--title">Sufi</h2>
-                                        <span class="hero__profile--subtitle">Ui/Ux Desinger</span>
+                                        <h2 class="hero__profile--title">Sufi Firdaus</h2>
+                                        <span class="hero__profile--subtitle">Multimedia Developer</span>
                                     </div>
                                 </div>
                                 <ul class="hero__profile--info position__relative">
                                     <li class="hero__profile--info__list">
                                         <span class="hero__profile--info__icon"><svg class="max-w-5" width="16" height="34" fill="currentColor" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"></path></svg></span>
-                                        <a class="hero__profile--info__text" href="tel:+01215656855">+01215656855</a>
+                                        <a class="hero__profile--info__text" href="tel:+01215656855">+60178797176</a>
                                     </li>
                                     <li class="hero__profile--info__list">
                                         <span class="hero__profile--info__icon"><svg class="max-w-5" xmlns="http://www.w3.org/2000/svg" width="16" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg></span>
-                                        <a class="hero__profile--info__text" href="mailto:exampal@gmail.com">example@gmail.com</a>
+                                        <a class="hero__profile--info__text" href="mailto:exampal@gmail.com">sufifirdaus95@gmail.com</a>
                                     </li>
                                     <li class="hero__profile--info__list">
                                         <span class="hero__profile--info__icon"><svg class="max-w-5" width="16" height="34" fill="currentColor" stroke="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 256c-35.3 0-64-28.7-64-64s28.7-64 64-64s64 28.7 64 64s-28.7 64-64 64z"></path></svg></span>
-                                        <span class="hero__profile--info__text">fulbariFranciso,4200.</span>
+                                        <span class="hero__profile--info__text">Selangor, Malaysia</span>
                                     </li>
                                 </ul>
                             </div>
                             <div class="hero__content hero__profile--content">
                                 <span class="hero__content--subtitle text__secondary mb-10">HELLO  I'M</span>
-                                <h2 class="hero__content--title mb-15">Maras Faron! </h2>
-                                <h3 class="hero__content--subtitle2 mb-20">UX/UI Designer and Developer </h3>
-                                <p class="hero__content--desc mb-30">There are many variations of sum availabled 
-                                    in alley of type and scrambled it some.</p>
+                                <h2 class="hero__content--title mb-15">Sufi Firdaus! </h2>
+                                <h3 class="hero__content--subtitle2 mb-20">Developer and Teacher</h3>
+                                <p class="hero__content--desc mb-30">Passionate Multimedia Developer and Educator experienced in AR development, app creation and . Committed to exceptional user experiences, engaging learning environments, and innovative technology solutions.</p>
                                 <button class="primary__btn download__btn mb-30">
                                     <svg class="download__btn--svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" ><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
-                                    Download CV
+                                    Download Resume
                                 </button>
                                 <div class="social__share style2 d-flex align-items-center">
                                     <span class="social__share--title">Follow Me: </span>
                                     <ul class="social__share--wrapper d-flex">
                                         <li class="social__share--child"><a class="social__share--link" href="#">
-                                            <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="20px" height="20px">    <path d="M17.525,9H14V7c0-1.032,0.084-1.682,1.563-1.682h1.868v-3.18C16.522,2.044,15.608,1.998,14.693,2 C11.98,2,10,3.657,10,6.699V9H7v4l3-0.001V22h4v-9.003l3.066-0.001L17.525,9z"/></svg>
-                                            <span class="visually-hidden">Facebook</span>
+                                            <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="20px" height="20px">    <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
+                                            <span class="visually-hidden">Github</span>
                                         </a>
                                         </li>
                                         <li class="social__share--child"><a class="social__share--link" href="#">
-                                            <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="20px" height="20px">    <path d="M12,2C6.477,2,2,6.477,2,12c0,4.237,2.636,7.855,6.356,9.312c-0.087-0.791-0.167-2.005,0.035-2.868 c0.182-0.78,1.172-4.971,1.172-4.971s-0.299-0.599-0.299-1.484c0-1.391,0.806-2.428,1.809-2.428c0.853,0,1.265,0.641,1.265,1.408 c0,0.858-0.546,2.141-0.828,3.329c-0.236,0.996,0.499,1.807,1.481,1.807c1.777,0,3.143-1.874,3.143-4.579 c0-2.394-1.72-4.068-4.177-4.068c-2.845,0-4.515,2.134-4.515,4.34c0,0.859,0.331,1.781,0.744,2.282 c0.082,0.099,0.093,0.186,0.069,0.287c-0.076,0.316-0.244,0.995-0.277,1.134c-0.043,0.183-0.145,0.222-0.334,0.133 c-1.249-0.582-2.03-2.408-2.03-3.874c0-3.154,2.292-6.052,6.608-6.052c3.469,0,6.165,2.472,6.165,5.776 c0,3.447-2.173,6.22-5.189,6.22c-1.013,0-1.966-0.527-2.292-1.148c0,0-0.502,1.909-0.623,2.378 c-0.226,0.868-0.835,1.958-1.243,2.622C9.975,21.843,10.969,22,12,22c5.522,0,10-4.478,10-10S17.523,2,12,2z"/></svg>
-                                            <span class="visually-hidden">Pinterest</span>
+                                            <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="20px" height="20px">    <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                                            <span class="visually-hidden">Linkedin</span>
                                             </a>
                                         </li>
                                         <li class="social__share--child"><a class="social__share--link" href="#">
