--- a/about.html
+++ b/about.html
@@ -280,7 +280,7 @@
                                         <span class="resume__content--subtitle">UPM</span>
                                     </div>
                                     <p class="resume__content--desc mb-20">I researched the Stereoscopic AR approach for learning heart anatomy, comparing hands-free interaction methods like virtual button, head gaze, voice recognition, and gestures for a more immersive learning experience.</p>
-                                    <span class="resume__date">2024</span>
+                                    <span class="resume__date">Current</span>
                                 </div>
                             </div>
                         </div>
